[package]
name = "lau-spectral-graph-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-spectral-graph-agent"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

[lib]
name = "lau_spectral_graph_agent"
path = "src/lib.rs"
